scss/main.scss
.main_window {
    height            : 100vh;
    margin            : 0px;
    padding           : 0px;
    display           : grid;
    grid-template-rows: 24px calc(100vh - 48px) 24px;
    overflow          : hidden;
}

.toolbar_container {
    margin               : 0px;
    padding              : 2px;
    display              : grid;
    grid-template-columns: 4fr 2fr 2fr 4fr;
    width                : 100%;
}

.main_tools {
    margin : 0px;
    padding: 0px;
    height : 24px;
}

.lang_select_tools {
    margin               : 0px;
    padding              : 0px;
    height               : 24px;
    display              : grid;
    grid-template-columns: 1fr 1fr;
}

.example_select_tools {
    margin               : 0px;
    padding              : 0px;
    height               : 24px;
    display              : grid;
    grid-template-columns: 1fr 1fr;
}

#editor_language_select {
    margin : 0px;
    padding: 0px;
    height : 24px;
}

.util_tools {
    text-align: right;
}

.main_container {
    margin               : 0px;
    padding              : 2px;
    display              : grid;
    grid-template-columns: 1fr 1fr;
    width                : 100%;
    resize               : both;
}

.statusbar_container {
    margin               : 0px;
    padding              : 2px;
    display              : grid;
    grid-template-columns: 1fr 1fr;
    width                : 100%;
}

.turtle_code_container {
    height: 100%;
}

#turtle_code {
    height: 100%;
    resize: both;
}

#turtle_toolbar_container {
    display              : grid;
    grid-template-columns: 1fr 1fr 1fr;
    width                : 100%;
}

// from dark.css
html {
    font-size : 13px;
    height    : 100%;
    min-height: 700px;
}

body {
    overflow        : hidden;
    background-color: black;
    color           : whitesmoke;
}

/* a {
    color: #00B7FF;
  } */

.toolbar {
    background: #444444;
}

.statusbar {
    background: #444444;
}

/* #turtle_canvas {
    border: 1px solid coral;
  } */

/* #turtle_code {
    width: 100%; 
    height: 100%; 
  } */

.name-li {
    background: black;
    margin    : 1px;
    padding   : 5px;
    cursor    : pointer;
}

.name-li.selected {
    background: dimgray;
}

#turtle_list {
    list-style-type: none;
    margin         : 1px;
    padding        : 1px;
}

#object_code {
    font-family: monospace;
    max-height : 800px;
    overflow-y : auto;
    overflow-x : visible;
    color      : red;
    font-size  : 0.85em;
}

.header {
    text-align      : center;
    /* border-bottom: 1px solid lightgray; */
    margin          : 2px;
    padding         : 1px;
}

#turtle_toolbar_container {
    flex: 2%;
}

#turtle_canvas_container {
    flex      : 70%;
    max-height: 87%;
}

#turtle_console_container {
    flex      : 20%;
    max-height: 20%;
    overflow-y: auto;
}

html,
body,
div {
    box-sizing: border-box;
}

#homelink {
    cursor: pointer;
}

.statusbar-item {
    border-style : solid;
    border-color : gray;
    border-width : 1px;
    margin-top   : 1px;
    margin-bottom: 1px;
    margin-left  : 0px;
    margin-right : 0px;
    white-space  : nowrap;
    overflow     : hidden;
    text-overflow: ellipsis;
}

.form-check {
    font-size: 0.75rem;
}

#turtle_console {
    list-style: none;
}

.stderrln {
    background: #F0A0A0;
}

.text.text-dark {
    color: whitesmoke !important;
}

option {
    background: black;
    color     : whitesmoke !important;
}

.input-group-text {
    background: #6c757d !important;
    border    : 0px !important;
    color     : whitesmoke !important;
}

